Add near cache integration test